--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "wasm-micro-runtime"]
 	path = wasm-micro-runtime
-	url = https://github.com/bytecodealliance/wasm-micro-runtime.git
+	url = git@github.com:meshins/wasm-micro-runtime.git
